# pipeline_metrics_collector

./: .gitignore  README.md  pyproject.toml
src/pipeline_metrics_collector/: __init__.py  cli.py  collector.py  contract.py  latency.py  loader.py  metrics.py  report.py
tests/: test_cli.py  test_collector.py  test_contract.py  test_latency.py  test_loader.py  test_metrics.py  test_report.py
