[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeline-metrics-collector"
version = "0.1.0"
description = "Collect runtime, execution, consumer, artifact, and latency metrics from RADAR_SERVICE pipeline reports."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Dai-Soai" }
]
dependencies = []

[project.scripts]
pipeline-metrics = "pipeline_metrics_collector.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
